
namespace Cine
{
    public class Administrador : Usuario
    {
        public Administrador(string nombre, string apellido, string email, string contrasena)
            : base(nombre, apellido, email, contrasena)
        {

        }
        public void DardeAlta()
        {

        }

        public void DardeBaja()
        {

        }


    }
}