namespace Cine
{
    public class Sala
    {
        public int Asientos { get; set; }
        public Sala(int asientos)
        {
            this.Asientos = asientos;
        }
    }
}