namespace Entidades
{
    public class Ciudad
    {
        public int NroSede { get; set; }
        public Ciudad(int nroSede)
        {
            this.NroSede = nroSede;
        }
    }
}