namespace Entidades
{
    public class Invitado
    {
        public int Edad { get; set; }
        public Invitado(int edad)
        {
            this.Edad = edad;
        }
    }
}