classDiagram

class Miembro
Miembro: +id
Miembro: +habilitado
Miembro: +lista
Miembro: +nombre
Miembro: +apellido
Miembro: +email
Miembro: +contraseña
Miembro *-- Invitado


Miembro o-- Reserva
Reserva *-- Pago

class Invitado
Invitado: +edad

class cadenaCine
cadenaCine: +nombre
cadenaCine: +sede

Sede *-- Pelicula
cadenaCine *-- Miembro

class Sede
Sede: +nombre
Sede: +direccion
Sede: +sala
Sede: +ciudad
Sede: +proyeccion
Sede: +pelicula
Sede: +nroSede
cadenaCine *-- Sede


class Ciudad
Ciudad: +nroSede

class Pelicula 
Pelicula: +titulo
Pelicula: +descripcion
Pelicula: +idioma
Pelicula: +genero
Pelicula: +lanzamiento
Pelicula: +calidad
Pelicula: +duracion



Sede o-- Proyeccion

Sede *-- Sala

Sala o-- Reserva
Sala o-- Proyeccion
Sede o-- Ciudad

class Proyeccion
Proyeccion: +pelicula
Proyeccion: +sala
Proyeccion: +formato
Proyeccion: +horarios

class Sala
Sala: +asientos




class Reserva
Reserva: +nro
Reserva: +nroAsiento
Reserva: +estado
Reserva: +nroSala
Reserva: +nombreSede
Reserva: +proyeccion
Reserva: AgregarPago()

class Sistema
Sistema: +cadenaCine
Sistema: +Reservas
Sistema: +Miembros


Sistema o-- Notificacion
Sistema *-- cadenaCine
Sistema *-- Miembro

class Pago
Pago: +credito
Pago: +efectivo
Pago: +debito
Pago: +pagoDigital
Pago: +descuento
Pago: esCredito() 
Pago: esEfectivo()
Pago: esDebito()
Pago: esQr()


class Cupon
Cupon: +descuento
Pago o-- Cupon


Pago *-- Notificacion

class Notificacion
Notificacion: +email

class Administrador
Administrador: DardeAlta()
Administrador: DardeBaja()
Administrador o-- Sistema
Miembro <|-- Administrador 